# sitelens

./: .env  .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml
api/: .dockerignore  Cargo.toml  Dockerfile  schema.graphql
api/benches/: core_bench.rs
api/migrations/: 0001_orgs_and_users.sql  0002_projects_grid_control.sql  0003_transforms.sql  0004_points_and_imports.sql  0005_cad_overlays.sql  0006_perf_indexes.sql  0007_project_terrain.sql  0008_project_buildings.sql  0009_site_rotation.sql  0010_cad_overlay_elevation.sql  0011_verification_token_expiry.sql  0012_password_reset_and_invite_expiry.sql  0013_billing.sql  0014_field_exchange.sql  0015_utility_records.sql  0016_surface_modeling.sql  0017_site_analysis.sql  0018_vehicle_presets.sql  0019_project_boundary.sql  0020_project_detailed_terrain.sql
api/src/: archive.rs  asset.rs  auth.rs  billing.rs  convert.rs  crs.rs  db.rs  dxf.rs  export.rs  geo.rs  import.rs  lib.rs  mail.rs  main.rs  models.rs  plan.rs  pubsub.rs  ratelimit.rs  schema.rs  storage.rs  units.rs
api/src/analysis/: mod.rs  parking.rs  turning.rs  vec2.rs
api/src/archive/: export.rs  import.rs  types.rs
api/src/field/: compare.rs  csv_preset.rs  jobxml.rs  landxml.rs  mod.rs  preset.rs  report.rs
api/src/models/: analysis.rs  assets.rs  auth.rs  coord.rs  export.rs  field.rs  grid.rs  points.rs  project.rs  scene.rs  surface.rs  utilities.rs
api/src/report/: mod.rs
api/src/report/drawing/: fit.rs  geometry.rs  grid.rs  mod.rs  model.rs  panels.rs  svg.rs
api/src/schema/: analysis.rs  auth.rs  billing.rs  common.rs  coords.rs  field.rs  grid.rs  mod.rs  mutation.rs  overlays.rs  points.rs  projects.rs  query.rs  scene.rs  subscription.rs  surface.rs  system.rs  terrain.rs  utilities.rs
api/src/schema/surface/: mod.rs  mutation.rs  query.rs  shared.rs
api/src/surface/: contour.rs  dem.rs  export.rs  geom.rs  geotiff.rs  mod.rs  sampler.rs  terrain_composite.rs  tin.rs  volume.rs
api/src/utilities/: audit.rs  export.rs  geom.rs  import.rs  mod.rs
api/src/utilities/export/: codecs.rs  mod.rs  schedule.rs
api/tests/: integration.rs
api/tests/integration/: analysis.rs  asset.rs  auth.rs  billing.rs  common.rs  composite.rs  coords.rs  export.rs  field.rs  grid_transform.rs  main.rs  overlays.rs  points.rs  projects.rs  scene.rs  surface.rs  tenancy.rs  utilities.rs  webhooks.rs
db/: init.sql
docs/: ARCHITECTURE.md  AUTH_AND_LIVE_SCENE_PHASES.md  AUTH_AND_LIVE_SCENE_SPEC.md  BILLING_GO_LIVE.md  BILLING_PHASES.md  BILLING_SPEC.md  DEPLOYMENT.md  INFRASTRUCTURE.md  PERFORMANCE.md  PHASE-MARKETING-LANDING.md  PHASES.md  SETUP.md  SPEC.md
docs/legal/: BREACH_RESPONSE.md  DPA.md  README.md  ROPA.md  SUBPROCESSORS.md
report/: Dockerfile  app.py
scripts/: loadtest.sh  report-preview.html  report-preview.sh  seed-baps-analyses.mjs  seed-baps-jc.mjs  seed-baps-surface-elevations.sql  seed-baps-surfaces.mjs  seed-baps-utilities.sql  seed.mjs
web/: .dockerignore  .gitignore  .prettierrc  Dockerfile  codegen.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.mts
web/e2e/: add-point.spec.ts  analysis.spec.ts  asset-transport.spec.ts  auth-redirect.spec.ts  auth.spec.ts  billing-checkout.spec.ts  billing.spec.ts  building-grid.spec.ts  categories.spec.ts  control-points.spec.ts  core-flow.spec.ts  danger-zone.spec.ts  export-contents.spec.ts  field.spec.ts  helpers.ts  large-dataset.spec.ts  password-reset.spec.ts  prod-smoke.spec.ts  project-archive.spec.ts  projects.spec.ts  scene-live.spec.ts  scene.spec.ts  smoke.spec.ts  surfaces.spec.ts  survey-points.spec.ts  theme.spec.ts  users.spec.ts  utilities.spec.ts  verification.spec.ts  workspace.spec.ts
web/scripts/: copy-cesium.mjs  fetch-showcase.mjs
web/src/lib/: api.ts  (+22 more)
(+223 files in other folders)
