[package]
name = "sitelens-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "sitelens_api"
path = "src/lib.rs"

[[bin]]
name = "sitelens-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"
nalgebra = "0.33"
proj4rs = "0.1"
crs-definitions = { version = "0.3", features = ["proj4", "wkt"] }
csv = "1"
roxmltree = "0.20"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_bench"
harness = false

[profile.release]
opt-level = 2
