[package]
name = "sitelens-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "sitelens_api"
path = "src/lib.rs"

[[bin]]
name = "sitelens-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "compression-br"] }
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"
async-stream = "0.3"
nalgebra = "0.33"
spade = "2"
proj4rs = "0.1"
crs-definitions = { version = "0.3", features = ["proj4", "wkt"] }
csv = "1"
dxf = "0.5"
roxmltree = "0.20"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }
resend-rs = "0.25.1"

[dev-dependencies]
criterion = "0.5"
base64 = "0.22"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bench]]
name = "core_bench"
harness = false

[profile.release]
opt-level = 2
